# skeptic

./: .env.example  .gitattributes  .gitignore  TODO.md  dashboard.py  grants_notes.txt  pyproject.toml
config/: assets.yaml
data/: zip_prices.sh
data/models/: bnb.joblib  btc.joblib  doge.joblib  eth.joblib  sol.joblib  xrp.joblib
data/prices/: prices_20260322.csv  prices_20260323.csv  prices_20260324.csv  prices_20260325.csv  prices_20260326.csv  prices_20260327.csv  prices_20260328.csv  prices_20260329.csv  prices_20260330.csv  prices_20260331.csv  prices_20260401.csv  prices_20260406.csv  prices_20260407.csv  prices_20260408.csv  prices_20260409.csv  prices_20260410.csv  prices_20260411.csv  prices_20260412.csv  prices_20260413.csv  prices_20260414.csv  prices_20260415.csv  prices_20260416.csv  prices_20260417.csv  prices_20260418.csv  prices_20260419.csv  prices_20260420.csv  prices_20260421.csv  prices_20260422.csv  prices_20260423.csv  prices_20260424.csv  prices_20260425.csv
docs/: fund_matic_for_redemptions.md
scripts/: audit_slippage.py  backtest_model.py  bootstrap.py  collect_and_sync.ps1  collect_loop.sh  collect_orderbook.py  collect_prices.py  dashboard.py  fetch_coin_prices.py  filter_incomplete_windows.py  live_dashboard.py  live_high_buy.py  live_momentum_buy.py  migrate_prices.py  paper_trade.py  regime.py  research.py  reversion_edge.py  run_all.py  slippage_report.py  sync_to_s3.py  test_redeem.py  threshold_edge.py  trade.py  train_model.py  train_nn.py
scripts/dashboard/: __main__.py  collector.py  (+10 more)
skeptic/: config.py  storage.py
(+19 files in other folders)
