[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skeptic"
version = "0.1.0"
description = "Polymarket 5-minute crypto up/down trading bot"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.19.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skeptic*"]
